server/public/layout.css
.container {
  width: 60%;
  height: 100%;
  margin: auto;
}

.body-container {
  max-width: 672px;
  margin: auto;
  height: 100%;
}

.register-container {
  width: 25%;
  margin: auto;
}

.list-container {
  background-color: #f0f0f0;
  height: 7rem;
  border-radius: 10px;
  margin: 1rem 0;
  box-shadow: 1px 1px 4px gray;
}

.day-container {
  width: 90%;
  margin: auto;
}

.header-container {
  max-width: 672px;
  margin: auto;
}

.map-header-container {
  width: 40%;
  margin: auto;
}

.itinerary-container {
  max-width: 672px;
  margin: auto;
}

.map-container {
  width: 40%;
  margin: auto;
}

.itinerary-card {
  width: 100%;
  margin: auto;
}

.itinerary-header {
  background-color: #f0f0f0;
  border-radius: 3px;
  min-height: 8rem;
}

.itinerary-body {
  border: solid 1px #f0f0f0;
  border-radius: 3px;
}

.row {
  display: flex;
}

.col-half {
  flex-basis: 50%;
}

.col-one-third {
  flex-basis: calc(100% / 3);
}

.col-two-third {
  flex-basis: calc(100% / 3 * 2);
}

.col-one-tenth {
  flex-basis: 10%;
}

.col-nine-tenth {
  flex-basis: 90%;
}

.flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.justify-center {
  justify-content: center;
}

.justify-space-between {
  justify-content: space-between;
}

.justify-end {
  justify-content: flex-end;
}

.align-center {
  align-items: center;
}

.column-half {
  flex-basis: 50%;
}

.margin-auto {
  margin: auto;
}

.plan-button-margin {
  margin-top: 2rem;
}

.select-icon-margin {
  margin: 1rem 0 0;
}

.register-sign-in-margin {
  margin: 1.5rem 0;
  width: 100%;
}

.header-margin {
  margin: 2rem 0;
  width: 100%;
}

.title-margin {
  margin: 0.4rem 0;
}

.margin-none {
  margin: 0;
}

.day-margin {
  margin: 15px 0;
}

.itinerary-margin {
  margin: 3px 0;
}

.bottom-margin {
  margin-bottom: 10px;
}

.icon-margin {
  margin: 0 10px 0 0;
}

.map-icon-margin {
  margin: 0 13px 0 1px;
}

.rating-margin {
  margin: 0 3px 0 0;
}

.margin-left {
  margin-left: 1.5rem;
}

.auth-link-margin {
  margin-left: 4px;
}

.window-margin {
  margin: 0 0 8px;
}

.initiate-margin {
  margin: 1.5rem 0 0.25rem;
}

.position-absolute {
  position: absolute;
}

.position-relative {
  position: relative;
}

.position {
  right: 1.5rem;
  top: 4.8rem;
}

.container-padding {
  padding: 1rem;
}

.trip-list-padding {
  padding: 0 0 0 20px;
}

.padding-left {
  padding: 10px 0 10px 4rem;
}

.icon-padding-left {
  padding-left: 6px;
}

.ellipses-padding {
  padding: 12px;
}

.modal-padding {
  padding: 0 10px;
}

.list-container:hover {
  background-color: #dfdfdf;
}

@media screen and (max-width: 727px) {
  .body-container {
    margin: auto;
  }

  .itinerary-container {
    margin: auto;
  }

  .header-container {
    margin: auto;
  }
}

@media screen and (max-width: 576px) {
  .container {
    width: 100%;
  }

  .register-container {
    width: 90%;
  }

  .body-container {
    width: 90%;
  }

  .list-container {
    height: 6rem;
  }

  .header-container {
    width: 90%;
  }

  .map-header-container {
    width: 95%;
  }

  .itinerary-container {
    width: 90%;
  }

  .col-one-third {
    flex-basis: 25%;
  }

  .col-two-third {
    flex-basis: 75%;
  }

  .select-icon-margin {
    margin: 0;
  }

  .header-margin {
    margin: 1rem 0;
  }

  .itinerary-margin {
    margin: 1px 0;
  }

  .trip-list-padding {
    padding: 0 0 0 5px;
  }

  .title-margin {
    margin: 0.2rem 0;
  }

  .padding-left {
    padding-left: 1.5rem;
  }

  .map-container {
    width: 93%;
  }

  .full-width {
    width: 100%;
  }

  .icon-modal {
    height: 595px;
    width: 345px;
    padding: 20px 10px;
  }

  .icon {
    width: 80px;
    height: 80px;
  }

  .icon-image {
    height: 60px;
    width: 60px;
  }

  .destination {
    font-size: 0.9rem;
  }

  .date-range {
    font-size: 0.8rem;
  }

  .add-button {
    padding: 3px 13px;
    font-size: 2rem;
    position: fixed;
    bottom: 3rem;
    right: 2rem;
    z-index: 1;
  }

  .maps-button {
    font-size: 1.15rem;
  }

  .itinerary-input {
    width: 100%;
  }

  .initiate-input {
    width: 100%;
    height: 2.4rem;
    border-radius: 5px;
    border: 1px solid gray;
    padding: 0 8px;
  }

  .day-font {
    font-size: 1.1rem;
  }

  .weather-font {
    font-size: 0.8rem;
  }

  .itinerary-font {
    font-size: 0.75rem;
  }
}

